--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     },
     "license": "MIT",
     "dependencies": {
-        "lodash": "^4.17.11",
-        "postcss": "^7.0.5",
-        "svg2ttf": "^4.1.0",
-        "svgicons2svgfont": "^9.0.3",
+        "path": "^0.12.7",
+        "postcss": "^7.0.27",
+        "svg2ttf": "^4.3.0",
+        "svgicons2svgfont": "^9.1.1",
         "ttf2woff": "^2.0.1"
     }
 }
